Convenience methods to simplify code.